# be-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  MARKETS_UX.md  PLAN.md  README.md  REFACTOR_PLAN.md  RESEARCH.md  RUN.md  api.py  docker-compose.yml  flow.md  main.py  promptfooconfig.yaml  pyproject.toml
.claude/: settings.local.json
db/: __init__.py  models.py  session.py
models/: SYSTEM_PROMPT.txt  explain.py  filter.py  guard.py  intent.py  markets.py  prompts.py  sql_validator.py
scripts/: convert_json.py  ingest.py  schema.sql  synthetic.py  tickers.py
services/: indian_api.py  tavily_search.py
